shared/js/cyph/components/chat-message/chat-message.component.scss
@import '../../../../css/mixins';
@import '../../../../css/theme.scss';

.mail-ui {
	.mail-divider {
		border-bottom: 1px solid rgba(0, 0, 0, 0.25);
		margin: 8px -24px 24px -24px;
		width: calc(100% + 48px);
	}

	::ng-deep {
		mat-card {
			padding: 24px;

			mat-card-header {
				margin-right: -17px;

				.mat-card-header-text {
					width: 100%;
				}
			}

			mat-card-title {
				font-size: 14px !important;
			}
		}
	}
}

.message-item:not(.mobile) .mail-ui {
	.avatar-image {
		margin-top: -13px;
		margin-left: -13px;
	}
}

.mobile-time {
	text-overflow: ellipsis;
	overflow: hidden;
	max-width: 90px;
	white-space: nowrap;
}

.media-wrapper {
	display: flex;
	align-items: center;
}

.clipboard-copy-menu {
	margin-top: -4px;
	width: 24px;
	height: 24px;
	line-height: 24px;

	mat-icon {
		@include icon-size(14px);
	}
}

.confirmation-checks {
	vertical-align: middle;

	mat-icon {
		@include icon-size(14px);

		&:first-child {
			margin-right: -12px;
		}
	}
}

.message-loading {
	width: 100%;
	text-align: center;
	vertical-align: middle;
	border-style: dashed;
	border-width: 1.5px;

	> div {
		margin: 12px 0;
		padding-top: 0.5px;
	}
}

.message-item.mobile {
	::ng-deep a {
		color: $cyph-hyperlinks-mobile !important;
		font-weight: bold;
	}

	.clipboard-copy-menu {
		margin-top: -8px;
	}
	&.author-remote .clipboard-copy-menu {
		margin-top: -6px;
		margin-left: -8px;
	}

	.confirmation-checks mat-icon {
		@include icon-size(12px);

		&:first-child {
			margin-right: -11px;
		}
	}

	.spoiler {
		margin-top: -13px;
		width: 100%;
		height: 128px;
	}
}

.spoiler {
	background-color: rgba(0, 0, 0, 1);
	cursor: pointer;
	width: 50%;
	height: 170px;

	> .spoiler-message {
		color: white;
		font-family: 'Ubuntu Mono';
		font-size: 2em;
		text-align: center;
		position: absolute;
		top: 50%;
		left: 0;
		width: 100%;

		@include transform(translateY(-50%));
	}

	:not(.spoiler-message) {
		pointer-events: none;
		visibility: hidden;
	}
}

:host ::ng-deep {
	.message-item {
		word-wrap: break-word;
		word-break: break-word;
		padding: 7.5px 10px 5px 10px;
		margin: 2.5px;
		min-height: 0;
		position: relative;

		@include transition(opacity 0.25s linear);

		.message {
			max-width: 100%;
			padding-bottom: 5px;

			> * {
				padding-top: 5px;
			}
		}

		.message-timestamp {
			text-align: right;
		}

		a:not([href]):not([router-link]) {
			cursor: auto;
			text-decoration: none;
		}

		.media-message {
			cursor: pointer;
			width: 256px;
			height: 160px;
			object-fit: cover;
			margin: 10px auto;
			display: block;
			box-shadow: 0 4px 10px -1px rgba(0, 0, 0, 0.4);
			position: relative;

			> video {
				width: 100%;
				height: 100%;
			}
		}

		h4.media-title {
			text-align: center;
			width: 100%;
			margin-bottom: 0.5em;
			margin-top: 1em;

			&.download-link {
				cursor: pointer;
				text-decoration: underline;
			}
		}

		h4.media-title,
		.mat-button-wrapper {
			text-overflow: ellipsis;
			white-space: nowrap;
			overflow-x: hidden;
			display: block;
		}

		.centered {
			@include center;
		}

		.centered-fake {
			margin-top: -14px;
		}

		.centered,
		.centered-fake {
			max-width: 50%;

			&.media-container {
				height: 100%;

				> audio {
					margin-top: 64px;
					margin-bottom: 49px;
				}
			}

			mat-progress-spinner {
				margin-top: 60px;
				margin-bottom: 60px;
			}
		}

		&:not(.mobile) .centered.media-container > audio {
			margin-top: 61px;
		}

		&.get-value-failure {
			opacity: 0.5;
		}

		.save-file {
			max-width: 66%;

			span.mat-button-wrapper {
				line-height: 3.5em;
			}

			mat-icon.mat-icon {
				padding-right: 0.5em;
			}
		}

		.self-destruct-timer {
			font-size: 2.3rem;
			text-align: center;
			padding: 20px;
			display: block;
		}

		/* Self-destruct animation */
		&.self-destruct {
			text-align: center;

			/*
			From ec9eaff, for reference if wanted in the future:

			.message-text * {
				height: 100vh;
				font-weight: 25vh;
			}
			*/
		}

		.self-destruct-cover {
			content: ' ';
			height: 100%;
			width: 100%;
			top: 0;
			left: 0;
			background-color: black;
			position: absolute;
			z-index: 5;

			@include transform(scaleX(0));

			@include transform-origin(top left);
		}

		&.self-destructed .self-destruct-cover {
			@include transform(scaleX(1));

			@include transition(transform 3s cubic-bezier(0.8, 0.4, 1, 0.3));
		}

		&.author-app .message {
			text-align: center;

			cyph-markdown {
				margin-top: 20px;

				* {
					font-weight: bold;
				}
			}
		}

		&.mobile {
			.message-timestamp {
				height: 12px;
			}

			.self-destruct-cover {
				left: -25vw;
				width: 150vw;
			}

			.self-destruct-timer {
				font-size: 1.43rem;
				padding: 5px;
			}

			.media-message {
				width: calc(80vw - 1px);
				height: 128px;
				margin: 0;
				border-top-right-radius: $mobileMessageBorderRadius;
				clip-path: inset(0 0 -100% 0);
			}

			.media-message,
			.spoiler {
				border-top-right-radius: $mobileMessageBorderRadius;
			}

			&.author-local {
				.media-message,
				.spoiler {
					border-top-left-radius: $mobileMessageBorderRadius;
				}
			}

			.media-container > audio {
				margin-top: 46px;
				margin-bottom: 24px;
			}

			.centered,
			.centered-fake {
				max-width: 100%;

				mat-progress-spinner {
					margin-top: 39px;
					margin-bottom: 39px;
				}
			}
		}

		&:not(.mobile) {
			border-radius: 1px;

			.video-message-wrapper {
				cursor: pointer;

				> video {
					pointer-events: none;
				}
			}
		}

		/* Temporary workaround for matTooltip issue */

		touch-action: inherit !important;

		@include user-select(inherit !important);
	}

	.file-transfer .message {
		min-width: 275px;
	}

	cyph-markdown > span {
		> :not(p),
		> p:not(:only-child) {
			margin: 10px;
		}

		> * {
			margin-left: 5px !important;
			margin-right: 5px !important;
		}
	}
}

